Description: when a query uses replaceable parameters it opens a dialog when run so the user can enter the parameters, when a Base form is based on this query the form is opened and then the query parameter dialog box on top of that - until 6.1 Now the query parameter dialog opens first and then form on top of it with all controls empty because the query Steps to Reproduce: 1. Open the attached test file (macro execution does not matter) 2. Open the first form. 'Lokup_by_name' Actual Results: The form is on the top of the desktop, covering up the query parameter replacement dialog. Expected Results: The dialog box is on top of the form. Reproducible: Always User Profile Reset: No Additional Info: Checked in 6.0.5, 6.1 RC 3 and 6.2 Alpha 6.0.5 works as expected the newer releases have the problem.
Created attachment 144141 [details] example file (from ask.libo) Example file with a couple of forms based on queries with rep. parameters.
Bibisected with 6.1 repo on Ubuntu 18.04 The behavior arrived with this commit: 27473d1c0f8ba3006262001cbefff33f639a19ac 'tdf#114935 Move the focus back to the document' By : Maxim Monastirsky <momonasmon@gmail.com> 2018-01-10 00:38:30 +0200
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea77c31944c7ca8896e5e58f3f57d9a9cbe9b6bb tdf#119245 Set a parent for OParameterDialog It will be available in 6.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
@Maxim, should it be backported to branch 6-1 ?
*** Bug 119247 has been marked as a duplicate of this bug. ***
Verified in Version: 6.2.0.0.alpha0+ Build ID: 18e20676024baecaf5719139f80f053f5f1e784a CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; Locale: ca-ES (ca_ES.UTF-8); Calc: threaded Closing as VERIFIED FIXED
Maxim Monastirsky committed a patch related to this issue. It has been pushed to "libreoffice-6-1": http://cgit.freedesktop.org/libreoffice/core/commit/?id=d52f64b1ae7a95704ee9b17b034a43fcea05d1ea&h=libreoffice-6-1 tdf#119245 Set a parent for OParameterDialog It will be available in 6.1.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.