tdf#119245 Set a parent for OParameterDialog

Change-Id: I5a7f4b43027a72f049e12c06cd583c6545b028f5
Reviewed-on: https://gerrit.libreoffice.org/58952
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit ea77c31944c7ca8896e5e58f3f57d9a9cbe9b6bb)
Reviewed-on: https://gerrit.libreoffice.org/59001
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>